<resources>
    <string name="app_name">Sample Board</string>

    <string name="action_home">Home</string>
    <string name="action_search">Search</string>
    <string name="action_feed">Feed</string>
    <string name="action_profile">Profile</string>
    <string name="action_camera">Camera</string>

    <string name="action_print">Print</string>
    <string name="action_done">Done</string>
    <string name="action_setting">Settings</string>
    <string name="action_logout">Logout</string>

    <string name="action_report">Report</string>
    <string name="action_copy_url">Copy URL</string>

    <string name="action_clear">Clear</string>
    <string name="action_editProfile">Edit Profile</string>
    <string name="action_edit">Edit</string>
    <string name="action_share">Share</string>

    <!-- Sharedprefrence keys -->
    <string name="pref_user_id">prefUserID</string>
    <string name="pref_isFingertouchEnable">isFingerTouchEnable</string>

    <!-- API Keys -->
    <string name="FACEBOOK_APP_ID">109979009547724</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">209db66e5d6df5df4669e2751313b1a8</string>
    <string name="ak_login_protocol_scheme">ak109979009547724</string>

    <!-- Error String -->
    <string name="error_internet">Internet not working</string>
    <string name="error_api">Server Not Responding</string>
    <string name="error_something">Something Went Wrong</string>

    <string name="transition_image">detail_image</string>

    <string name="dummy_text">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters
    It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <!-- Setting screen strings-->

    <string name="edit_profile">Edit Profile</string>
    <string name="enable_fingerprint">Enable FingerPrint</string>
    <string name="logout">Logout</string>
    <string name="see_terms_privacy"><![CDATA[See Terms & Privacy]]></string>
    <string name="get_help">Get help</string>

    <!-- Password Strings-->
    <string name="fingerprint_not_recognized">Fingerprint not recognized. Try again</string>
    <string name="fingerprint_success">Fingerprint recognized</string>
    <string name="cancel">Cancel</string>
    <string name="use_password">Use password</string>
    <string name="verify">Verify</string>
    <string name="ok">OK</string>
    <string name="password">Password</string>
    <string name="fingerprint_description">Confirm fingerprint to continue</string>
    <string name="fingerprint_hint">Touch sensor</string>
    <string name="password_description">Enter password to continue</string>
    <string name="new_fingerprint_enrolled_description">A new fingerprint was added to this device, so your password is required.</string>
    <string name="use_fingerprint_in_future">Use fingerprint in the future</string>
    <string name="use_fingerprint_to_authenticate_title">Use fingerprint to authenticate</string>
    <string name="use_fingerprint_to_authenticate_key" >use_fingerprint_to_authenticate_key</string>
    <string name="description_bugdroid_icon">Android bugdroid image</string>
    <string name="description_fingerprint_icon">Fingerprint icon</string>

    <string name="show_more">Show More</string>
    <string name="show_less">Show Less</string>
    <string name="message">Message</string>
    <string name="fork">Fork</string>
    <string name="posts">Posts</string>
    <string name="groups">Groups</string>
    <string name="forking">Forking</string>
    <string name="forked_by">Forked By</string>
    <string name="no_items_yet">No Items yet :(</string>
    <string name="message_download_complete">Download complete</string>
    <string name="related_posts">Related Posts</string>
    <string name="open_music">Open Music</string>
    <string name="enter_comment">Enter Comment</string>
    <string name="no_comments_yet">No Comments yet!!</string>
    <string name="cover_image">cover_image</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="save_profile">Save Profile</string>
    <string name="enter_required_fields">Please enter required fields.</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="profile_pic">Profile Pic</string>
    <string name="timeline_post">Timeline Post</string>
    <string name="warning_media_valid_url">Media doesn\'t have a valid URL.</string>
</resources>
