<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:title="@string/action_home"
        app:showAsAction="ifRoom"
        android:visible="true"
        android:icon="@drawable/ic_home"
        />
    <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        app:showAsAction="ifRoom"
        android:visible="true"
        android:icon="@drawable/ic_search"
        />
    <item
        android:id="@+id/action_feed"
        android:title="@string/action_feed"
        app:showAsAction="ifRoom"
        android:visible="true"
        android:icon="@drawable/ic_toys"
        />
    <item
        android:id="@+id/action_profile"
        android:title="@string/action_profile"
        app:showAsAction="ifRoom"
        android:visible="true"
        android:icon="@drawable/ic_profile"
        />
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_profile"
        app:showAsAction="ifRoom"
        android:visible="true"
        android:icon="@drawable/ic_settings"
        />
</menu>