<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.sampleboard.bean.api_response.UserResponse" />
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:background="@color/windowBackground"
        android:clickable="true"
        android:focusable="true">

        <include
            android:id="@+id/include_toolbar"
            layout="@layout/layout_toolbar" />

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_margin_16">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="220dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:alpha="0.6"
                        android:background="@drawable/app_background"
                        android:contentDescription="@string/cover_image" />

                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true">

                        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                            android:id="@+id/profile_image"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:layout_gravity="center"
                            android:src="@drawable/profile_img"
                            android:transitionName="profile_pic"
                            tools:targetApi="lollipop" />

                        <android.support.design.widget.FloatingActionButton
                            android:id="@+id/btn_edit_profile_pic"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom|end"
                            android:src="@drawable/ic_edit"
                            android:tint="@color/white"
                            app:backgroundTint="@color/colorPrimary"
                            app:fabSize="mini" />

                        <ProgressBar
                            android:id="@+id/profile_progress_bar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center" />

                    </FrameLayout>
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_margin_10"
                    android:layout_marginRight="@dimen/activity_margin_10"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/activity_margin_5"
                        android:layout_marginTop="@dimen/activity_margin_10">

                        <EditText
                            android:id="@+id/et_firstname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/ic_profile"
                            android:drawablePadding="@dimen/activity_margin_10"
                            android:drawableStart="@drawable/ic_profile"
                            android:drawableTint="@color/colorPrimary"
                            android:hint="@string/first_name"
                            android:imeOptions="actionNext"
                            android:inputType="textPersonName|textCapWords"
                            android:maxLines="1"
                            android:padding="@dimen/margin_4"
                            android:text="@{viewModel.first_name}"
                            android:textColor="@color/app_textcolor"
                            android:textColorHint="@color/app_hintcolor"
                            android:textSize="@dimen/text_size"
                            tools:targetApi="m" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/activity_margin_10">

                        <EditText
                            android:id="@+id/et_lastname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/ic_profile"
                            android:drawablePadding="@dimen/activity_margin_10"
                            android:drawableStart="@drawable/ic_profile"
                            android:drawableTint="@color/colorPrimary"
                            android:hint="@string/last_name"
                            android:imeOptions="actionNext"
                            android:inputType="textPersonName|textCapWords"
                            android:maxLines="1"
                            android:padding="@dimen/activity_margin_5"
                            android:text="@{viewModel.last_name}"
                            android:textColor="@color/app_textcolor"
                            android:textColorHint="@color/app_hintcolor"
                            android:textSize="@dimen/text_size"
                            tools:targetApi="m" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/activity_margin_10">

                        <EditText
                            android:id="@+id/et_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/ic_email"
                            android:drawablePadding="@dimen/activity_margin_10"
                            android:drawableStart="@drawable/ic_email"
                            android:drawableTint="@color/colorPrimary"
                            android:enabled="false"
                            android:hint="@string/email"
                            android:imeOptions="actionDone"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:padding="@dimen/activity_margin_5"
                            android:text="@{viewModel.email}"
                            android:textColor="@color/app_textcolor"
                            android:textColorHint="@color/app_hintcolor"
                            android:textSize="@dimen/text_size"
                            tools:targetApi="m" />
                    </android.support.design.widget.TextInputLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/activity_margin_10">

                        <TextView
                            android:id="@+id/tv_gender"
                            style="@style/txtview_standard_widget"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:text="Gender" />

                        <RadioGroup
                            android:id="@+id/group_gender"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="@dimen/margin_4"
                            android:layout_marginStart="@dimen/margin_4"
                            android:layout_toEndOf="@+id/tv_gender"
                            android:layout_toRightOf="@+id/tv_gender"
                            android:orientation="horizontal">

                            <RadioButton
                                android:id="@+id/radio_male"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:checked="true"
                                android:text="@string/male" />

                            <RadioButton
                                android:id="@+id/radio_female"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/female" />
                        </RadioGroup>
                    </RelativeLayout>


                    <!-- Save Profile Button -->
                    <android.support.v7.widget.ButtonBarLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/activity_margin_32">

                        <Button
                            android:id="@+id/btn_saveProfile"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/colorPrimary"
                            android:clickable="true"
                            android:elevation="@dimen/activity_margin_5"
                            android:focusable="true"
                            android:foreground="?attr/selectableItemBackgroundBorderless"
                            android:text="@string/save_profile"
                            android:textColor="@color/windowBackground"
                            android:textSize="@dimen/text_size"
                            tools:targetApi="lollipop" />
                    </android.support.v7.widget.ButtonBarLayout>
                </LinearLayout>
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
    </android.support.design.widget.CoordinatorLayout>
</layout>