<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="200dp"
    android:minWidth="200dp"
    android:foreground="?attr/selectableItemBackground"
    app:cardElevation="5dp"
    app:cardCornerRadius="5dp"
    app:cardPreventCornerOverlap="false"
    app:cardUseCompatPadding="true">
    <LinearLayout
        android:id="@+id/parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/image"
                android:transitionName="@string/transition_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/timeline_post"
                android:minHeight="200dp"
                android:src="@drawable/ic_default_image"
                android:scaleType="centerCrop"
                tools:ignore="UnusedAttribute" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/info_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:visibility="visible"
            android:background="@android:color/white">
            <TextView
                android:id="@+id/title"
                style="@style/txtview_standard_widget"
                android:layout_alignParentTop="true"
                android:text=""
                android:maxLines="1"
                android:ellipsize="end"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:padding="@dimen/activity_margin_3"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title">
                <ImageView
                    android:id="@+id/img_re_share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:contentDescription="@string/app_name"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_reshare"
                    android:tint="@color/green"
                    android:padding="5dp"/>
                <LinearLayout
                    android:id="@+id/likes_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/margin_8"
                    android:layout_marginEnd="@dimen/margin_8"
                    android:gravity="center_vertical"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:id="@+id/like_area"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:id="@+id/ic_heart_initial"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:contentDescription="@string/app_name"
                            android:background="@drawable/ic_heart_1"
                            android:scaleType="fitXY"
                            />
                        <ImageView
                            android:id="@+id/ic_heart_final"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:contentDescription="@string/app_name"
                            android:background="@drawable/ic_heart_29"
                            android:scaleType="fitXY"
                            android:visibility="gone" />
                    </LinearLayout>
                    <TextView
                        android:id="@+id/likes_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/txtview_small_widget"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:text="125"
                        android:textColor="@color/app_textcolor_heading" />
                </LinearLayout>
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>
